<resources>
    <string name="app_name">RepoBrowser</string>
    <string name="search">Search</string>
    <string name="repositories">Repositories</string>
    <string name="author_avatar">Author avatar</string>
    <string name="error_something_went_wrong">Something went wrong</string>
    <string name="back">Back</string>
    <string name="repo_by">Repo by</string>
    <string name="view_online">View online</string>
    <string name="share_repo_button">Share Repo</string>
    <string name="number_of_stars_with_value">Number of Stars (%d)</string>
    <string name="commits_history">Commits history</string>
    <string name="repository_search_is_empty">Repositories not found</string>
    <string name="choose_one">Choose one</string>
    <string name="initial_search_query">Android</string>
</resources>