<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/repositoryDetailsContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/beginVerticalGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/normal_125" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/endVerticalGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/normal_125" />

            <ImageView
                android:id="@+id/authorAvatarImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/author_avatar"
                android:minHeight="@dimen/details_min_author_avatar_height"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/image_transparent_black_overlay"
                app:layout_constraintBottom_toBottomOf="@+id/authorAvatarImage"
                app:layout_constraintEnd_toEndOf="@+id/authorAvatarImage"
                app:layout_constraintStart_toStartOf="@+id/authorAvatarImage"
                app:layout_constraintTop_toTopOf="@+id/authorAvatarImage" />

            <Button
                android:id="@+id/backButton"
                style="@style/BackButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_100"
                android:text="@string/back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/repoByText"
                style="@style/RepositoryDetailsRepoByTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_50"
                android:text="@string/repo_by"
                app:layout_constraintBottom_toTopOf="@id/repoAuthorNameText"
                app:layout_constraintStart_toStartOf="@+id/beginVerticalGuideline" />

            <TextView
                android:id="@+id/repoAuthorNameText"
                style="@style/RepositoryDetailsAuthorNameTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_75"
                app:layout_constraintBottom_toTopOf="@id/numberOfStarsText"
                app:layout_constraintStart_toStartOf="@+id/beginVerticalGuideline"
                tools:text="Repo Author Name" />

            <TextView
                android:id="@+id/numberOfStarsText"
                style="@style/RepositoryDetailsStarsTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13sp"
                android:drawablePadding="@dimen/small_75"
                app:drawableStartCompat="@drawable/ic_star_icon_filled"
                app:drawableTint="@color/white_transparent"
                app:layout_constraintBottom_toBottomOf="@id/authorAvatarImage"
                app:layout_constraintStart_toStartOf="@+id/beginVerticalGuideline"
                tools:text="Number of Stars (234)" />

            <TextView
                android:id="@+id/repoNameText"
                style="@style/RepositoryDetailsRepoNameTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_125"
                app:layout_constraintStart_toStartOf="@+id/beginVerticalGuideline"
                app:layout_constraintTop_toBottomOf="@id/authorAvatarImage"
                tools:text="Repo Title" />

            <Button
                android:id="@+id/viewOnlineButton"
                style="@style/ViewOnlineButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_online"
                app:layout_constraintBottom_toBottomOf="@id/repoNameText"
                app:layout_constraintEnd_toEndOf="@+id/endVerticalGuideline"
                app:layout_constraintTop_toTopOf="@id/repoNameText" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/commitsFragment"
                android:name="pl.handsome.club.repobrowser.ui.CommitsHistoryListFragment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_150"
                android:layout_marginBottom="@dimen/normal_150"
                app:layout_constraintBottom_toTopOf="@+id/shareRepoButton"
                app:layout_constraintEnd_toEndOf="@+id/endVerticalGuideline"
                app:layout_constraintStart_toStartOf="@+id/beginVerticalGuideline"
                app:layout_constraintTop_toBottomOf="@id/repoNameText"
                tools:layout="@layout/fragment_commits_history" />

            <Button
                android:id="@+id/shareRepoButton"
                style="@style/ShareRepoButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/large_150"
                android:fontFamily="@font/sf_pro_text_semibold"
                android:paddingVertical="@dimen/small_175"
                android:text="@string/share_repo_button"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/endVerticalGuideline"
                app:layout_constraintStart_toStartOf="@+id/beginVerticalGuideline" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>